Fixed title wrapping problem with stylign re-design

--- a/css/basic.css
+++ b/css/basic.css
@@ -14,12 +14,13 @@ article,section,header,footer {
  margin:0.5em 0;
 }
 section.post {
- border-bottom:1px solid red;
+ border-top:1px solid red;
 }
 a {
  color:#1d337d;
 }
 footer {
+ border-top:1px solid #1d337d;
  font-size:81%;
 }
 p {
@@ -31,10 +32,10 @@ h1,h2 {
 }
 h1 {
  margin-top:0;
- border-bottom:3px solid #1d337d;
+ border-top:3px solid #1d337d;
  background: url(../images/logo.png) right center no-repeat;
- height:60px;
- line-height:60px;
+ min-height:60px;
+ padding-right:50px;
 }
 h2 {
  margin-bottom:0;
